banners and done

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ insurance/scripts/richMedia/.DS_Store
 insurance/scripts/.DS_Store
 
 insurance/scripts/.DS_Store
+
+simonly/.DS_Store
+
+simonly/scripts/richMedia/.DS_Store
+
+simonly/scripts/richMedia/.DS_Store
