live test updates

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ simonly/.DS_Store
 simonly/scripts/richMedia/.DS_Store
 
 simonly/scripts/richMedia/.DS_Store
+
+simonly/scripts/.DS_Store
+
+simonly/scripts/.DS_Store
