--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@ simonly/scripts/richMedia/.DS_Store
 simonly/scripts/.DS_Store
 
 simonly/scripts/.DS_Store
+
+src/.DS_Store
+
+src/.DS_Store
+
+src/Vodafone_Richmedia_768X1200_V9/.DS_Store
+
+src/Vodafone_Richmedia_768X1200_V9/.DS_Store
