removing more ds_store

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ insurance/scripts/richMedia/.DS_Store
 .DS_Store
 
 insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
