trying to match latest

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ insurance/scripts/richMedia/.DS_Store
 insurance/scripts/richMedia/media/.DS_Store
 
 insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
