--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ insurance/scripts/richMedia/.DS_Store
 insurance/scripts/richMedia/media/.DS_Store
 
 insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
