removing ds_ files again

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ insurance/scripts/richMedia/.DS_Store
 insurance/scripts/richMedia/media/.DS_Store
 
 insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
