--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ insurance/scripts/richMedia/.DS_Store
 insurance/scripts/richMedia/media/.DS_Store
 
 insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
+
+insurance/scripts/richMedia/media/.DS_Store
